[package]
name = "tor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
arti-client = { version = "0.33.0", features = ["onion-service-client"] }
futures = "0.3.31"
tor-rtcompat = "0.33.0"
anyhow = "1.0.98"
once_cell = "1.21.3"
